--- a/src/Components/Mediaqury.css
+++ b/src/Components/Mediaqury.css
@@ -1,20 +1,25 @@
-@media(min-width:320px) and (max-width:700px) {
-
-    .weather_data{
-        width: 100%;
-        margin: 30px 40px;
-    }
-    .btns {
-        right: 5px;
-    }
-    .searchBar{
-        right:20px;
-        padding-bottom: 50px;
-    }
-    .weather_icon img{
-        height: 100px;
-    }
-    .locals{
-        padding-top: 95px;
-    }
+@media (min-width: 320px) and (max-width: 700px) {
+ body{
+  height: 150vh;
+ }
+  .weather_data {
+    width: 95%;
+  }
+  .searchBar input{
+    margin-left: 25px;
+    width: 95%;
+  }
+  .btns {
+    right: 1%;
+  }
+  .searchBar {
+    right: 20px;
+    padding-bottom: 50px;
+  }
+  .weather_icon img {
+    height: 100px;
+  }
+  .locals {
+    padding-top: 95px;
+  }
 }
